adding logical assignment and new features in JS 2021

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     </head>
     <body>
         <h1>Aviad's Lab</h1>
-
+            <h3>
+                <img width="30" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/600px-Octicons-mark-github.svg.png" alt="">
+                <a href="https://github.com/aviadgawl/AviadsLab.git">Aviad's Lab on GitHub</a>
+            </h3>
         <table>
             <tr class="bold">
                 <td>Lab Name</td>
@@ -31,6 +34,11 @@
                 <td>Web Worker</td>
                 <td>Simple example of web worker</td>
                 <td><a href="./web-worker/web-worker.html">Web Worker Lab</a></td>
+            </tr>
+            <tr>
+                <td>ECMAScript 2021</td>
+                <td>Simple examples of new features in javascript</td>
+                <td><a href="./ECMAScript2021/ECMAScript2021.html">ECMAScript 2021</a></td>
             </tr>
         </table>
     </body>
