--- a/public/index.html
+++ b/public/index.html
@@ -11,34 +11,40 @@
             </h3>
         <table>
             <tr class="bold">
+                <td>Order</td>
                 <td>Lab Name</td>
                 <td>Description</td>
                 <td>Link</td>
             </tr>
             <tr>
+                <td>1</td>
                 <td>Web Browser 101</td>
                 <td>General idea how the modarn web browser works</td>
-                <td><a href="./browser101/browser101.html">Web Browser 101</a></td>
+                <td><a href="./browser101/index.html">Web Browser 101</a></td>
             </tr>
             <tr>
+                <td>2</td>
                 <td>Synchronous</td>
                 <td>Example of a synchronous work in the web browser</td>
-                <td><a href="./async-await/sync.html">Sync Lab</a></td>
+                <td><a href="./async-await/index.html">Sync Lab</a></td>
             </tr>
             <tr>
+                <td>3</td>
                 <td>Asynchronous</td>
                 <td>Simple explenation about handling promises</td>
-                <td><a href="./async-await/async.html">Async Lab</a></td>
+                <td><a href="./async-await/index.html">Async Lab</a></td>
             </tr>
             <tr>
+                <td>4</td>
                 <td>Web Worker</td>
                 <td>Simple example of web worker</td>
-                <td><a href="./web-worker/web-worker.html">Web Worker Lab</a></td>
+                <td><a href="./web-worker/index.html">Web Worker Lab</a></td>
             </tr>
             <tr>
+                <td>5</td>
                 <td>ECMAScript 2021</td>
                 <td>Simple examples of new features in javascript</td>
-                <td><a href="./ECMAScript2021/ECMAScript2021.html">ECMAScript 2021</a></td>
+                <td><a href="./ECMAScript2021/index.html">ECMAScript 2021</a></td>
             </tr>
         </table>
     </body>
