--- a/public/index.html
+++ b/public/index.html
@@ -26,13 +26,13 @@
                 <td>2</td>
                 <td>Synchronous</td>
                 <td>Example of a synchronous work in the web browser</td>
-                <td><a href="./async-await/index.html">Sync Lab</a></td>
+                <td><a href="./async-await/sync.html">Sync Lab</a></td>
             </tr>
             <tr>
                 <td>3</td>
                 <td>Asynchronous</td>
                 <td>Simple explenation about handling promises</td>
-                <td><a href="./async-await/index.html">Async Lab</a></td>
+                <td><a href="./async-await/async.html">Async Lab</a></td>
             </tr>
             <tr>
                 <td>4</td>
@@ -43,8 +43,8 @@
             <tr>
                 <td>5</td>
                 <td>ECMAScript 2021</td>
-                <td>Simple examples of new features in javascript</td>
-                <td><a href="./ECMAScript2021/index.html">ECMAScript 2021</a></td>
+                <td>Simple examples of new features in javascript for 2021</td>
+                <td><a href="./ECMAScript2021/index.html">ECMAScript 2021 Lab</a></td>
             </tr>
         </table>
     </body>
