--- a/public/index.html
+++ b/public/index.html
@@ -1,51 +1,45 @@
 <html>
-    <head>
-        <title>Aviad Lab</title>
-        <link rel="stylesheet" href="./style.css">
-    </head>
-    <body>
+
+<head>
+    <title>Aviad Lab</title>
+    <link rel="stylesheet" href="./style.css">
+</head>
+
+<body>
+    <header>
         <h1>Aviad's Lab</h1>
-            <h3>
-                <img width="30" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/600px-Octicons-mark-github.svg.png" alt="">
-                <a href="https://github.com/aviadgawl/AviadsLab.git">Aviad's Lab on GitHub</a>
-            </h3>
-        <table>
-            <tr class="bold">
-                <td>Order</td>
-                <td>Lab Name</td>
-                <td>Description</td>
-                <td>Link</td>
-            </tr>
-            <tr>
-                <td>1</td>
-                <td>Web Browser 101</td>
-                <td>General idea how the modarn web browser works</td>
-                <td><a href="./browser101/index.html">Web Browser 101</a></td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>Synchronous</td>
-                <td>Example of a synchronous work in the web browser</td>
-                <td><a href="./async-await/sync.html">Sync Lab</a></td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>Asynchronous</td>
-                <td>Simple explenation about handling promises</td>
-                <td><a href="./async-await/async.html">Async Lab</a></td>
-            </tr>
-            <tr>
-                <td>4</td>
-                <td>Web Worker</td>
-                <td>Simple example of web worker</td>
-                <td><a href="./web-worker/index.html">Web Worker Lab</a></td>
-            </tr>
-            <tr>
-                <td>5</td>
-                <td>ECMAScript 2021</td>
-                <td>Simple examples of new features in javascript for 2021</td>
-                <td><a href="./ECMAScript2021/index.html">ECMAScript 2021 Lab</a></td>
-            </tr>
-        </table>
-    </body>
+        <p>Simple examples with simple explenation to grasp the idea behind concepts.</p>
+    </header>
+    <section class="flex-container">
+    <div>
+        <span class="bold">Web Browser 101</span>
+        <hr />
+        <span>General idea how the modarn web browser works</span>
+        <hr />
+        <a href="./browser101/browser101.html">Web Browser 101</a>
+    </div>
+    <div>
+        <span class="bold">Synchronous</span>
+        <hr />
+        <span>Example of a synchronous work in the web browser</span>
+        <hr />
+        <a href="./async-await/sync.html">Sync Lab</a>
+    </div>
+    <div>
+        <span class="bold">Asynchronous</span>
+        <hr />
+        <span>Simple explenation about handling promises</span>
+        <hr />
+        <a href="./async-await/async.html">Async Lab</a>
+    </div>
+    <div>
+        <span class="bold">Web Worker</span>
+        <hr />
+        <span>Simple example of web worker</span>
+        <hr />
+        <a href="./web-worker/web-worker.html">Web Worker Lab</a>
+    </div>
+</section>
+</body>
+
 </html>
