Adding some more style

--- a/public/async-await/index.html
+++ b/public/async-await/index.html
@@ -7,7 +7,15 @@
 </head>
 
 <body>
-    <h1> Asynchronous Code </h1>
+    <section class="top-bar-flex-container">
+        <div><img src="../code-icon.png" class="icon" alt="code icon" /></div>
+        <div>JavaScriptsLab</div>
+        <div style="margin-left: auto;"><a href="https://github.com/aviadgawl/JavaScriptLab"><img class="icon" src="../git-icon.png" alt="git icon" /></a></div>
+    </section>
+    <header class="header-flex-container">
+        <div class="main-text">Asynchronous Code</div>
+        <div>Simple examples with simple explenation to grasp the idea behind concepts.</div>
+    </header>
     <button onclick="doWork()">Do 3 Seconds Work!</button>
     <button onclick="doWorkAsync()">Do 3 Seconds Work Async!</button>
     <button onclick="otherWork()">Do Some Other Work!</button>
