--- a/public/browser101/index.html
+++ b/public/browser101/index.html
@@ -4,6 +4,15 @@
         <link rel="stylesheet" href="../style.css">
     </head>
     <body>
+        <section class="top-bar-flex-container">
+            <div><img src="../code-icon.png" class="icon" alt="code icon" /></div>
+            <div>JavaScriptsLab</div>
+            <div style="margin-left: auto;"><a href="https://github.com/aviadgawl/JavaScriptLab"><img class="icon" src="../git-icon.png" alt="git icon" /></a></div>
+        </section>
+        <header class="header-flex-container">
+            <div class="main-text">Browser 101</div>
+            <div>Simple examples with simple explenation to grasp the idea behind concepts.</div>
+        </header>
         <img src="./windows1.png" alt="windows and processes drawing">
         <img src="./windows2.png" alt="processes and threads drawing">
 
