--- a/public/index.html
+++ b/public/index.html
@@ -6,38 +6,47 @@
 </head>
 
 <body>
-    <header>
-        <h1>Aviad's Lab</h1>
-        <p>Simple examples with simple explenation to grasp the idea behind concepts.</p>
+    <section class="top-bar-flex-container">
+        <div><img src="./code-icon.png" class="icon" alt="code icon" /></div>
+        <div>JavaScriptsLab</div>
+        <div style="margin-left: auto;"><a href="https://github.com/aviadgawl/JavaScriptLab"><img class="icon" src="./git-icon.png" alt="git icon" /></a></div>
+    </section>
+    <header class="header-flex-container">
+        <div class="main-text">Java Script Lab</div>
+        <div>Simple examples with simple explenation to grasp the idea behind concepts.</div>
     </header>
-    <section class="flex-container">
+    <section class="content-flex-container">
     <div>
-        <span class="bold">Web Browser 101</span>
-        <hr />
+        <div>
+            <span class="bold">Web Browser 101</span>
+        </div>
         <span>General idea how the modarn web browser works</span>
         <hr />
-        <a href="./browser101/browser101.html">Web Browser 101</a>
+        <a href="./browser101">Web Browser 101</a>
     </div>
-    <div>
-        <span class="bold">Synchronous</span>
-        <hr />
+    <div class="content-item">
+        <div><span class="bold">Synchronous</span></div>
         <span>Example of a synchronous work in the web browser</span>
         <hr />
-        <a href="./async-await/sync.html">Sync Lab</a>
+        <a href="./async-await">Sync Lab</a>
     </div>
     <div>
-        <span class="bold">Asynchronous</span>
-        <hr />
+        <div><span class="bold">Asynchronous</span></div>
         <span>Simple explenation about handling promises</span>
         <hr />
-        <a href="./async-await/async.html">Async Lab</a>
+        <a href="./async-await">Async Lab</a>
     </div>
     <div>
-        <span class="bold">Web Worker</span>
-        <hr />
+        <div><span class="bold">Web Worker</span></div>
         <span>Simple example of web worker</span>
         <hr />
-        <a href="./web-worker/web-worker.html">Web Worker Lab</a>
+        <a href="./web-worker">Web Worker Lab</a>
+    </div>
+    <div>
+        <div><span class="bold">ECMA Script 2021</span></div>
+        <span>Simple examples of new featuers in java script</span>
+        <hr />
+        <a href="./ECMAScript2021">ECMA Script 2021 Lab</a>
     </div>
 </section>
 </body>
