--- a/ECMAScript2021/index.html
+++ b/ECMAScript2021/index.html
@@ -6,6 +6,16 @@
 </head>
 
 <body>
+    <section class="top-bar-flex-container">
+        <div><img src="../code-icon.png" class="icon" alt="code icon" /></div>
+        <div>JavaScriptsLab</div>
+        <div style="margin-left: auto;"><a href="https://github.com/aviadgawl/JavaScriptLab"><img class="icon" src="../git-icon.png" alt="git icon" /></a></div>
+    </section>
+    <header class="header-flex-container">
+        <div class="main-text">Asynchronous Code</div>
+        <div>Simple examples with simple explenation to grasp the idea behind concepts.</div>
+    </header>
+
     <div>
         <h2>Numberic separators</h2>
         <span>const million = 1_000_000 </span>
