--- a/web-worker/index.html
+++ b/web-worker/index.html
@@ -6,6 +6,16 @@
 </head>
 
 <body>
+    <section class="top-bar-flex-container">
+        <div><img src="../code-icon.png" class="icon" alt="code icon" /></div>
+        <div>JavaScriptsLab</div>
+        <div style="margin-left: auto;"><a href="https://github.com/aviadgawl/JavaScriptLab"><img class="icon" src="../git-icon.png" alt="git icon" /></a></div>
+    </section>
+    <header class="header-flex-container">
+        <div class="main-text">Web Worker</div>
+        <div>Simple examples with simple explenation to grasp the idea behind concepts.</div>
+    </header>
+
     <div>Count numbers: <output id="result"></output></div>
     <button onclick="startWorker()">Start Worker</button>
     <button onclick="stopWorker()">Stop Worker</button>
