Adding preview meta tag

--- a/public/ECMAScript2021/index.html
+++ b/public/ECMAScript2021/index.html
@@ -7,9 +7,9 @@
 
 <body>
     <section class="top-bar-flex-container">
-        <div><img src="../code-icon.png" class="icon" alt="code icon" /></div>
+        <div><img src="../assests/code-icon.png" class="icon" alt="code icon" /></div>
         <div>JavaScriptsLab</div>
-        <div style="margin-left: auto;"><a href="https://github.com/aviadgawl/JavaScriptLab"><img class="icon" src="../git-icon.png" alt="git icon" /></a></div>
+        <div style="margin-left: auto;"><a href="https://github.com/aviadgawl/JavaScriptLab"><img class="icon" src="../assets/git-icon.png" alt="git icon" /></a></div>
     </section>
     <header class="header-flex-container">
         <div class="main-text">Asynchronous Code</div>
