--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,17 @@
 <html>
 
 <head>
-    <title>Aviad Lab</title>
+    <title>Java Script Lab</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="icon" type="image/x-icon" href="./code-icon.png">
+    <meta property="og:image" content="./assets/preview.png">
 </head>
 
 <body>
     <section class="top-bar-flex-container">
-        <div><img src="./code-icon.png" class="icon" alt="code icon" /></div>
-        <div>JavaScriptsLab</div>
-        <div style="margin-left: auto;"><a href="https://github.com/aviadgawl/JavaScriptLab"><img class="icon" src="./git-icon.png" alt="git icon" /></a></div>
+        <div><img src="./assets/code-icon.png" class="icon" alt="code icon" /></div>
+        <div>JavaScriptLab</div>
+        <div style="margin-left: auto;"><a href="https://github.com/aviadgawl/JavaScriptLab"><img class="icon" src="./assets/git-icon.png" alt="git icon" /></a></div>
     </section>
     <header class="header-flex-container">
         <div class="main-text">Java Script Lab</div>
