--- a/browser101/index.html
+++ b/browser101/index.html
@@ -5,9 +5,9 @@
     </head>
     <body>
         <section class="top-bar-flex-container">
-            <div><img src="../code-icon.png" class="icon" alt="code icon" /></div>
+            <div><img src="../assets/code-icon.png" class="icon" alt="code icon" /></div>
             <div>JavaScriptsLab</div>
-            <div style="margin-left: auto;"><a href="https://github.com/aviadgawl/JavaScriptLab"><img class="icon" src="../git-icon.png" alt="git icon" /></a></div>
+            <div style="margin-left: auto;"><a href="https://github.com/aviadgawl/JavaScriptLab"><img class="icon" src="../assets/git-icon.png" alt="git icon" /></a></div>
         </section>
         <header class="header-flex-container">
             <div class="main-text">Browser 101</div>
