--- a/async-await/index.html
+++ b/async-await/index.html
@@ -9,7 +9,7 @@
 <body>
     <section class="top-bar-flex-container">
         <div><img src="../assets/code-icon.png" class="icon" alt="code icon" /></div>
-        <div>JavaScriptsLab</div>
+        <div>JavaScriptLab</div>
         <div style="margin-left: auto;"><a href="https://github.com/aviadgawl/JavaScriptLab"><img class="icon" src="../assets/git-icon.png" alt="git icon" /></a></div>
     </section>
     <header class="header-flex-container">
